--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+  <style>
+    body,
+    html {
+      overflow: hidden;
+    }
+  </style>
   <title>Max</title>
 </head>
 
