--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,8 @@
     body,
     html {
       overflow: hidden;
+      padding: 0;
+      margin: 0;
     }
   </style>
   <title>Mission Max</title>
